# metier

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  iwyu.imp  vcpkg-configuration.json  vcpkg.json
licenses/: CMakeLists.txt  boost.h  libzmq.h  license.cpp  license.cpp.in  license.hpp  lmdb.h  metier.h  openssl.h  qt.h  secp256k1.h  sodium.h
package/: CMakeLists.txt  flatpak.json  gui.flatpak.json
package/icons/: app-1024.icns
package/linux/: desktop.in  metainfo.xml.in
src/: CMakeLists.txt  app.cpp  app.hpp  app_imp.hpp  main.cpp  otwrap.cpp  otwrap.hpp  otwrap_imp.hpp
src/api/: CMakeLists.txt  api.cpp  api.hpp  custom.cpp  custom.hpp  imp.hpp  passwordcallback.cpp  passwordcallback.hpp  version.cpp.in
src/app/: CMakeLists.txt  app.cpp  app.hpp  factory.cpp  imp.hpp  legacy.cpp  no-qml.cpp  qml.cpp  qml.hpp  size.hpp  startup.cpp  startup.hpp
src/cli/: CMakeLists.txt  json.cpp  main.cpp  parser.cpp  parser.hpp  processor.cpp  processor.hpp
src/libmatterfi/: CMakeLists.txt
src/libmatterfi/treemodeladaptor/: TableViewColumn.qml  TreeView.qml  main.cpp  treemodeladaptor.cpp  treemodeladaptor.hpp  treeview.qrc
src/metier/: CMakeLists.txt
src/metier/common/: CMakeLists.txt  api.cpp  api.hpp  api.imp.cpp  api.imp.hpp  app.cpp  app.hpp  app.imp.cpp  app.imp.hpp  app.skin.cpp.in  app.version.cpp.in  claim.cpp  claim.hpp  convertblockchain.cpp  convertblockchain.hpp  custom.hpp  license.cpp  license.hpp  passwordcallback.cpp  passwordcallback.hpp  scopeguard.cpp  scopeguard.hpp  size.hpp  startup.cpp  startup.hpp
src/metier/common/cli/: CMakeLists.txt  endpoint.cpp.in  endpoint.hpp  parser.cpp  parser.hpp  processor.cpp  processor.hpp
src/metier/common/model/: CMakeLists.txt  licenses.cpp  licenses.hpp  seedlang.cpp  seedlang.hpp  seedsize.cpp  seedsize.hpp  seedtype.cpp  seedtype.hpp
src/metier/common/otproto/: CMakeLists.txt
src/metier/skins/: CMakeLists.txt
src/metier/skins/metier/: CMakeLists.txt  metier.cpp  metierctl.cpp
src/metier/skins/metier/skin/: app.imp.factory_advanced.cpp  app.imp.factory_standard.no-qml.cpp  app.imp.factory_standard.qml.cpp  app.imp.no-qml.cpp  app.imp.qml.cpp  app.imp.widgets.cpp  custom.cpp  size.cpp
src/metier/skins/metier/ui/: accountstatus.ui  blockchainchooser.ui  enterpassphrase.ui  firstrun.ui  licenses.ui  mainwindow.ui  receivingaddress.ui  showseed.ui
src/metier/skins/metier/util/: CMakeLists.txt  focuser.cpp  focuser.hpp  resizer.cpp  resizer.hpp
src/metier/skins/metier/widget/: CMakeLists.txt  accountstatus.cpp  accountstatus.hpp  addcontact.cpp  addcontact.hpp  blockchainchooser.cpp  blockchainchooser.hpp  blockchainsend.cpp  blockchainsend.hpp  enterpassphrase.cpp  enterpassphrase.hpp  firstrun.cpp  firstrun.hpp  licenses.cpp  licenses.hpp  mainwindow.cpp  mainwindow.hpp  newseed.cpp  newseed.hpp  profilealias.cpp  profilealias.hpp  qrtoolbutton.cpp  qrtoolbutton.hpp  receivingaddress.cpp  receivingaddress.hpp  recoverwallet.cpp  recoverwallet.hpp  seedmanager.cpp  seedmanager.hpp  showseed.cpp  showseed.hpp
src/models/: CMakeLists.txt  accountactivity.cpp  accountactivity.hpp  accountlist.cpp  accountlist.hpp  blockchainchooser.cpp  blockchainchooser.hpp  licenses.cpp  licenses.hpp  profile.cpp  profile.hpp  seedlang.cpp  seedlang.hpp  seedsize.cpp  seedsize.hpp  seedtype.cpp  seedtype.hpp
src/otwrap/: custom.cpp  custom.hpp  imp.hpp  metiercallback.cpp  metiercallback.hpp  notary.cpp  notary.hpp  passwordcallback.cpp  passwordcallback.hpp  validateseed.hpp  version.cpp.in
src/rpc/: CMakeLists.txt  rpc.cpp  rpc.hpp
src/skin/: CMakeLists.txt
src/skin/default/: CMakeLists.txt  resources.qrc
src/skin/qml/: CMakeLists.txt  IOSbackGesture.qml  MatterFi_HeaderBar.qml  OTidentity.qml  main.qml  qmldir  qtquickcontrols2.conf  resources.qrc  size.cpp
src/skin/qml/assets/: assets.qrc
src/skin/qml/drawers/: AccountActivity_ContextDrawer.qml  CreateContact_ContextDrawer.qml  MatterFi_ContextDrawer.qml  ReceiveFunds_ContextDrawer.qml  SendFunds_ContextDrawer.qml  drawers.qrc  qmldir
src/skin/qml/pages/: app_version.qml  home.qml  pages.qrc
src/skin/qml/pages/contacts/: contact_activity_threads.qml  view_contact_profile.qml
src/skin/qml/pages/existing_user/: advanced_wallet_details.qml  block_chain_chooser.qml  edit_profile.qml  enter_recovery_phrase.qml  show_recovery_phrase.qml  single_crypto_account_display.qml  user_accounts.qml
src/skin/qml/pages/newuser/: account_recovery_storing.qml  (+2 more)
src/skin/qml/shared/: ButtonText.qml  FontIconButton.qml  ListButtonObject.qml  NavButton.qml  NewWindow.qml  QML_Debugger.qml  SvgIconButton.qml  WaterMarker.qml  qml_shared.qrc  qmldir
src/skin/qml/styling/: CustStyle.qml  Fonts.qml  HorizontalLineRect.qml  IconIndex.qml  OutlineSimple.qml  qmldir  styling.qrc
src/ui/: CMakeLists.txt  accountstatus.ui  addcontact.ui  blockchainchooser.ui  blockchainsend.ui  enterpassphrase.ui  firstrun.ui  licenses.ui  mainwindow.ui  newseed.ui  profilealias.ui  qrtoolbutton.ui  receivingaddress.ui  recoverwallet.ui  seedmanager.ui
src/util/: CMakeLists.txt  claim.hpp  claim_legacy.cpp  claim_qml.cpp  convertblockchain.hpp  focuser.cpp  focuser.hpp  resizer.cpp  resizer.hpp  scopeguard.hpp
src/widgets/: CMakeLists.txt  accountstatus.cpp  accountstatus.hpp  addcontact.cpp  addcontact.hpp  blockchainchooser.cpp  blockchainchooser.hpp  blockchainsend.cpp  blockchainsend.hpp  enterpassphrase.cpp  enterpassphrase.hpp  firstrun.cpp  firstrun.hpp  licenses.cpp  licenses.hpp  mainwindow.cpp  mainwindow.hpp  newseed.cpp  newseed.hpp  profilealias.cpp  profilealias.hpp  qrtoolbutton.cpp  qrtoolbutton.hpp  receivingaddress.cpp  receivingaddress.hpp  recoverwallet.cpp  recoverwallet.hpp  seedmanager.cpp  seedmanager.hpp  showseed.cpp  showseed.hpp
src/widgets/blockchainsend/: imp.hpp
src/widgets/enterpassphrase/: imp.cpp  imp.hpp
src/widgets/mainwindow/: chaintoolboxmanager.hpp  imp.hpp  syncprogress.hpp
src/widgets/newseed/: imp.hpp
src/widgets/recoverwallet/: imp.hpp
src/widgets/showseed/: imp.hpp
(+78 files in other folders)
